# BPLA_fire_smoke_human-in-the-forest

./: .coverage  .dockerignore  .gitignore.txt  .pre-commit-config.yaml  Dockerfile  Fire_Detection.py  HOW_IT_WORKS.md  README.md  fire_interface.py  fire_interface_updated  mypy.ini  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
artifacts/: mission.plan
cpp/native_core/: CMakeLists.txt  bindings.cpp  native_core.cpp  native_core.hpp
data/artifacts/: mission.plan  mission.txt  plan.json
data/artifacts/logs/: fire_uav_debug.log.1  fire_uav_debug.log.2  fire_uav_debug.log.3
data/outputs/: detections.jsonl
docs/: HOW_IT_WORKS.md  unreal_visualizer_api.md
fire_uav/: __init__.py  __main__.py  bootstrap.py  init.py  logging_setup.py  main.py  route_planner_cpp.cp311-win_amd64.pyd
fire_uav/api/: main_rest.py  visualizer_api.py  ws_stream.py
fire_uav/app/: camera_thread.py  detect_thread.py  main_window.py  plan_widget.py  planner_thread.py  route_process.py  themes.py
fire_uav/config/: __init__.py  default.yaml  logging.yaml  settings.py  settings_default.json
fire_uav/core/: camera.py  detection.py  geometry.py  init.py  protocol.py  schema.py  settings_loader.py  tracker.py
fire_uav/cpp/: CMakeLists.txt  __init__.py  pyproject.toml  route_planner.cpp
fire_uav/domain/detect/: __init__.py  detection.py  tracker.py
fire_uav/domain/fusion/: __init__.py  geoprojector.py
fire_uav/domain/route/: __init__.py  converter.py  coverage.py  elevation.py  energy.py  no_fly.py  planner.py
fire_uav/domain/video/: camera.py  recorder.py  serializer.py
fire_uav/flight/: converter.py  coverage.py  elevation.py  energy.py  init.py  no_fly.py  planner.py
fire_uav/ground_app/: __init__.py  config.py  main_ground.py
fire_uav/gui/: map_providers.py
fire_uav/gui/qml/: main.qml
fire_uav/gui/themes/: themes.py
fire_uav/gui/utils/: gui_logger.py  gui_toast.py
fire_uav/gui/viewmodels/: detector_vm.py  planner_vm.py
fire_uav/gui/widgets/: plan_widget.py  video_pane.py
fire_uav/gui/windows/: main_window.py
fire_uav/infrastructure/: providers.py
fire_uav/io/: init.py  recorder.py  serializer.py  transmitter.py
fire_uav/module_app/: __init__.py  config.py  main_module.py
fire_uav/module_core/: __init__.py  factories.py  schema.py  settings_loader.py
fire_uav/module_core/adapters/: __init__.py  custom_sdk_adapter.py  interfaces.py  mavlink_adapter.py  unreal_adapter.py
fire_uav/module_core/detect/: __init__.py  detection.py
fire_uav/module_core/detections/: __init__.py  aggregator.py  manager.py  notifications.py  pipeline.py  registry.py  smoothing.py
fire_uav/module_core/energy/: __init__.py  python_energy_model.py
fire_uav/module_core/fusion/: __init__.py  geoprojector.py  python_projector.py
fire_uav/module_core/interfaces/: __init__.py  energy.py  geo.py  route_planner.py
fire_uav/module_core/native/: __init__.py  energy.py  geo.py
fire_uav/module_core/route/: __init__.py  converter.py  coverage.py  elevation.py  energy.py  maneuvers.py  planner.py  python_planner.py
fire_uav/scripts/: check_coverage.py  export_mavlink.py  profile_elevation.py  upload_dji_stub.py
fire_uav/services/: bus.py  metrics.py  visualizer_adapter.py  visualizer_client.py
fire_uav/services/components/: base.py  camera.py  detect.py
fire_uav/services/detections/: __init__.py  aggregator.py  pipeline.py
fire_uav/services/di/: container.py
fire_uav/services/lifecycle/: manager.py
fire_uav/services/telemetry/: transmitter.py
fire_uav/sim/: airsim_stub.py
fire_uav/tests/: test_planner.py
fire_uav/tests/unit/: test_camera.py  test_converter.py  test_coverage_energy.py  test_detect_thread.py  test_metrics_endpoint.py  test_planner_vm.py  test_recorder.py
fire_uav/ui/: cli.py
fire_uav/utils/: gui_logger.py  gui_toast.py  init.py  settings_loader.py
integration_service/: README.md
scripts/: setup_env.ps1  setup_env.sh
(+3 files in other folders)
