[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fire-uav"
version = "0.1.0"
description = "Fire-smoke-human detection UAV toolkit"
requires-python = ">=3.10"
# если есть внешние зависимости – перечислите их здесь
# dependencies = ["opencv-python", "pydantic", ...]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["fire_uav.tests*", "tests*"]

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
combine_as_imports = true
known_first_party = ["fire_uav"]
known_third_party = ["PySide6", "cv2", "numpy", "pytest"]
skip = [".venv", "build", "dist"]

[tool.flake8]
max-line-length = 100
extend-ignore = [
    "E203",
    "W503",
    "E501",
    "E402",
    "E265",
]
select = ["E", "F", "B", "B950"]
max-complexity = 10
exclude = ".venv,build,dist"


[tool.mypy]
python_version = "3.11"
plugins = []
strict = true
ignore_missing_imports = true             # для C-расширений (cv2, PySide6)
files = ["fire_uav"]

[tool.poetry.scripts]
fire-uav = "fire_uav.main:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
coverage = "^7.5"
pre-commit = "^3.7"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastapi = "^0.111"
uvicorn = {extras = ["standard"], version = "^0.30"}
pydantic = "^2.12"
numpy = ">=1.26,<2.0"
opencv-python = "^4.10.0"
PySide6 = ">=6.7,<6.9"
PySide6-Addons = ">=6.7,<6.9"
folium = "^0.20.0"
branca = "^0.8.1"
prometheus-client = "^0.23.0"
requests = "^2.32"
pyyaml = "^6.0"
shapely = "^2.0"
ortools = "^9.14.0"
ultralytics = "^8.3.0"
torch = "^2.4.0"
colorlog = "^6.8"
PySide6-Essentials = ">=6.7,<6.9"
